kubernetes/network/environment/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /staging
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
